--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
 	"dependencies": {
 		"express": "^4.2.0"
-	}
+	},
+	"scripts": {
+    	"start": "node app.js"
+	},
+	"engines": {
+    	"node": "0.10.x"
+	}	
 }
